// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": "3em",
      "boxShadow": "rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset",
      "color": "#333",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSize": "16px",
      "fontWeight": 700,
      "lineHeight": 1,
      "padding": "12px 24px",
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  style={
    Object {
      "backgroundColor": "#1ea7fd",
      "border": 0,
      "borderRadius": "3em",
      "color": "white",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSize": "14px",
      "fontWeight": 700,
      "lineHeight": 1,
      "padding": "11px 20px",
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": "3em",
      "boxShadow": "rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset",
      "color": "#333",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSize": "14px",
      "fontWeight": 700,
      "lineHeight": 1,
      "padding": "11px 20px",
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": "3em",
      "boxShadow": "rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset",
      "color": "#333",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSize": "12px",
      "fontWeight": 700,
      "lineHeight": 1,
      "padding": "10px 16px",
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Utils/useMenuKeyEvents Basic 1`] = `
<ul
  data-css-11fqjac=""
  data-testid="root-menu"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <li
    data-testid="root-list-item-0"
    onFocus={[Function]}
    tabIndex={-1}
  >
    0
     root list item
  </li>
  <li
    data-testid="root-list-item-1"
    onFocus={[Function]}
    tabIndex={-1}
  >
    1
     root list item
  </li>
  <li
    data-testid="root-list-item-2"
    onFocus={[Function]}
    tabIndex={-1}
  >
    2
     root list item
  </li>
  <li
    data-testid="root-list-item-3"
    onFocus={[Function]}
    tabIndex={-1}
  >
    3
     root list item
  </li>
  <li
    data-testid="root-list-item-4"
    onFocus={[Function]}
    tabIndex={-1}
  >
    4
     root list item
    <ul
      data-testid="sub-menu"
    >
      <li
        data-testid="first-sub-menu-list-item-0"
        onFocus={[Function]}
        tabIndex={-1}
      >
        0
         sub menu list item
      </li>
      <li
        data-testid="first-sub-menu-list-item-1"
        onFocus={[Function]}
        tabIndex={-1}
      >
        1
         sub menu list item
      </li>
      <li
        data-testid="first-sub-menu-list-item-2"
        onFocus={[Function]}
        tabIndex={-1}
      >
        2
         sub menu list item
      </li>
      <li
        data-testid="first-sub-menu-list-item-3"
        onFocus={[Function]}
        tabIndex={-1}
      >
        3
         sub menu list item
      </li>
      <li
        data-testid="first-sub-menu-list-item-4"
        onFocus={[Function]}
        tabIndex={-1}
      >
        4
         sub menu list item
      </li>
    </ul>
  </li>
  <li
    data-testid="root-list-item-5"
    onFocus={[Function]}
    tabIndex={-1}
  >
    5
     root list item
  </li>
  <li
    data-testid="root-list-item-6"
    onFocus={[Function]}
    tabIndex={-1}
  >
    6
     root list item
  </li>
  <li
    data-testid="root-list-item-7"
    onFocus={[Function]}
    tabIndex={-1}
  >
    7
     root list item
    <ul
      data-testid="sub-menu"
    >
      <li
        data-testid="second-sub-menu-list-item-0"
        onFocus={[Function]}
        tabIndex={-1}
      >
        0
         sub menu list item
      </li>
      <li
        data-testid="second-sub-menu-list-item-1"
        onFocus={[Function]}
        tabIndex={-1}
      >
        1
         sub menu list item
      </li>
      <li
        data-testid="second-sub-menu-list-item-2"
        onFocus={[Function]}
        tabIndex={-1}
      >
        2
         sub menu list item
      </li>
      <li
        data-testid="second-sub-menu-list-item-3"
        onFocus={[Function]}
        tabIndex={-1}
      >
        3
         sub menu list item
      </li>
      <li
        data-testid="second-sub-menu-list-item-4"
        onFocus={[Function]}
        tabIndex={-1}
      >
        4
         sub menu list item
      </li>
    </ul>
  </li>
  <li
    data-testid="root-list-item-8"
    onFocus={[Function]}
    tabIndex={-1}
  >
    8
     root list item
  </li>
  <li
    data-testid="root-list-item-9"
    onFocus={[Function]}
    tabIndex={-1}
  >
    9
     root list item
  </li>
</ul>
`;
